--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -1,4 +1,4 @@
-name: Create and publish a Docker image
+name: Create, scan and publish Docker image
 
 on:
   push:
@@ -9,9 +9,8 @@ env:
   IMAGE_NAME: ${{ github.repository }}
 
 jobs:
-  build-and-push-image:
+  build-scan-and-push:
     runs-on: ubuntu-latest
-    # Les permissions sont nécessaires pour que l'action puisse pousser l'image sur ghcr.io
     permissions:
       contents: read
       packages: write
@@ -33,6 +32,28 @@ jobs:
         with:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
 
+      # ÉTAPE 1 : On build l'image localement (load: true) pour pouvoir la scanner
+      - name: Build and load Docker image for scanning
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          load: true
+          tags: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:scanning
+
+      # ÉTAPE 2 : On scanne l'image locale avec Trivy
+      - name: Run Trivy vulnerability scanner
+        uses: aquasecurity/trivy-action@master
+        with:
+          image-ref: '${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:scanning'
+          format: 'table'
+          # exit-code 0 signifie que l'action n'échouera pas même si des vulnérabilités sont trouvées.
+          # Mettez 1 si vous voulez bloquer la publication en cas de faille.
+          exit-code: '0'
+          ignore-unfixed: true
+          vuln-type: 'os,library'
+          severity: 'CRITICAL,HIGH'
+
+      # ÉTAPE 3 : Si le scan passe, on re-build (rapide grâce au cache) et on push pour de bon
       - name: Build and push Docker image
         uses: docker/build-push-action@v5
         with:
