--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -6,7 +6,6 @@ on:
 
 env:
   REGISTRY: ghcr.io
-  IMAGE_NAME: ${{ github.repository }}
 
 jobs:
   build-scan-and-push:
@@ -14,10 +13,19 @@ jobs:
     permissions:
       contents: read
       packages: write
+      security-events: write
 
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
+
+      # ÉTAPE AJOUTÉE : Convertir le nom du repository en minuscules
+      - name: Lowercase IMAGE_NAME
+        run: |
+          echo "IMAGE_NAME=${GITHUB_REPOSITORY,,}" >> ${GITHUB_ENV}
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
 
       - name: Log in to the Container registry
         uses: docker/login-action@v3
@@ -32,28 +40,26 @@ jobs:
         with:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
 
-      # ÉTAPE 1 : On build l'image localement (load: true) pour pouvoir la scanner
-      - name: Build and load Docker image for scanning
+      - name: Build and export to Docker
         uses: docker/build-push-action@v5
         with:
           context: .
           load: true
+          # On utilise maintenant la variable d'environnement en minuscules
           tags: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:scanning
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
 
-      # ÉTAPE 2 : On scanne l'image locale avec Trivy
       - name: Run Trivy vulnerability scanner
         uses: aquasecurity/trivy-action@master
         with:
           image-ref: '${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:scanning'
           format: 'table'
-          # exit-code 0 signifie que l'action n'échouera pas même si des vulnérabilités sont trouvées.
-          # Mettez 1 si vous voulez bloquer la publication en cas de faille.
           exit-code: '0'
           ignore-unfixed: true
           vuln-type: 'os,library'
           severity: 'CRITICAL,HIGH'
 
-      # ÉTAPE 3 : Si le scan passe, on re-build (rapide grâce au cache) et on push pour de bon
       - name: Build and push Docker image
         uses: docker/build-push-action@v5
         with:
@@ -61,3 +67,5 @@ jobs:
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
